# tech-challenge-1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  etapas-tech-challenge.txt  pyproject.toml
disciplinas/01-ciclo-de-vida-dos-modelos/extracts/: aula_01_entendendo-o-problema-de-negocio-e-os-dados.txt  aula_02_experimentacao-e-mvp-de-modelos.txt  aula_03_desenvolvimento-e-engenharia-de-modelos.txt  aula_04_implantacao-de-modelos.txt  aula_05_monitoramento-e-manutencao.txt  aula_06_ci_cd-e-automacao-de-pipelines.txt  aula_07_governanca-e-ciclo-de-feedbacks.txt  aula_08_projeto-final_-ciclo-completo-de-ml.txt  material_cap-projeto-fase1-machine-learning-engineering.txt
disciplinas/02-fundamentos-de-ml/extracts/: aula_01_machine-learning-aula-01.txt  aula_02_machine-learning-aula-02.txt  aula_03_machine-learning-aula-03.txt  aula_04_machine-learning-aula-04.txt  aula_05_machine-learning-aula-05.txt  aula_06_machine-learning-aula-06.txt  aula_07_machine-learning-aula-07.txt  aula_08_machine-learning-aula-08.txt
docs/: deploy-architecture.md  ml-canvas.md  model-card.md  monitoring-plan.md
notebooks/: 01_eda_baselines.ipynb
scripts/: deploy-cloud-run.sh  download_data.py
src/telco_churn/: __init__.py  compare_models.py  mlflow_compare.py  train_mlp.py
src/telco_churn/api/: __init__.py  logging_config.py  (+5 more)
tests/: test_api.py  test_compare_models.py  test_cost_tradeoff.py  test_mlflow_compare.py  test_mlp.py  test_pandera_schema.py  test_project_layout.py  test_smoke_training_path.py  test_telco_pipeline.py  test_train_mlp.py  test_unit_preprocessing.py
(+42 files in other folders)
