[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "telco-churn-tech-challenge"
version = "0.1.0"
description = "Tech Challenge FIAP — churn com MLP, baselines e API (WIP)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mlflow>=2.10",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest>=8.0",
    "pandera>=0.18",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
